--- a/lw5/starter/index.html
+++ b/lw5/starter/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="header__photo">
-      <img src="images/photo.png" />
+      <img src="images/photo.png" alt="Фото для профайла"/>
     </div>
     <div class="header__epigraf">
       <p class="header__citation">
@@ -23,14 +23,14 @@
   </header>
   <div class="container">
     <div class="sidebar">
-      <h2 class="sidebar__title">Любимые писатели</h2>
+      <h2 class="sidebar__title">Любимые писатели:</h2>
       <ul class="marker-list">
         <li>Айзек Азимов</li>
         <li>Говард Лавкрафт</li>
         <li>Дмитрий Глуховский</li>
         <li>Чак Паланик</li>
       </ul>
-      <h2 class="sidebar__title">Любимые фильмы</h2>
+      <h2 class="sidebar__title">Любимые фильмы:</h2>
       <ol class="number-list">
         <li>Шоу Трумэна</li>
         <li>Малхолланд Драйв</li>
@@ -41,16 +41,17 @@
     <div class="introduce">
       <h1 class="introduce__title">Jane Doe</h1>
       <p class="introduce__description">
-        В 1930-е годы прошлого века физик Джордж Гамоу из университета штата Колорадо начал публиковать мини-сериал рассказов о неком мистере Томпкинсе, 
+        В 1930-е годы прошлого века физик Джордж Гамоу из университета штата Колорадо начал публиковать мини&#8209;сериал рассказов о неком мистере Томпкинсе, 
         банковском клерке средних лет. Мистер Томпкинс, как явствовало из этих историй, интересовался современной наукой.
       </p>
       <h2 class="introduce__hobbies__title">Мое хобби</h2>
       <p class="introduce__hobbies__description">
         Он регулярно посещал вечерние лекции местного профессора и, разумеется, всегда засыпал на самом интересном месте. 
+        <br />
         А когда просыпался, то обнаруживал себя в каком-нибудь параллельном мире, где один из основных законов физики действовал 
         не так, как в его мире.
       </p>
-      <a href="#" class="write_me">Напиши мне</a>
+      <a href="#" class="write_me">Напиши мне<span class="write_me__arrow">  &#8594;</span></a>
     </div> 
   </div>    
 </body>
