--- a/lw5/starter/index.html
+++ b/lw5/starter/index.html
@@ -21,17 +21,18 @@
       <p class="header__signa">— Том Демарко. Deadline</p>
     </div>
   </header>
+  <div class="clear"></div>
   <div class="container">
     <div class="sidebar">
       <h2 class="sidebar__title">Любимые писатели:</h2>
-      <ul class="marker-list">
+      <ul class="sidebar__marker-list">
         <li>Айзек Азимов</li>
         <li>Говард Лавкрафт</li>
         <li>Дмитрий Глуховский</li>
         <li>Чак Паланик</li>
       </ul>
       <h2 class="sidebar__title">Любимые фильмы:</h2>
-      <ol class="number-list">
+      <ol class="sidebar__number-list">
         <li>Шоу Трумэна</li>
         <li>Малхолланд Драйв</li>
         <li>Семь жизней</li>
@@ -53,6 +54,7 @@
       </p>
       <a href="#" class="write_me">Напиши мне<span class="write_me__arrow">  &#8594;</span></a>
     </div> 
-  </div>    
+  </div>
+  <div class="clear"></div>    
 </body>
 </html>
